--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 		"check-types": "tsc",
 		"lint:ts": "eslint \"src/**/*.ts\" \"src/**/*.tsx\" --cache --cache-location node_modules/.cache/.eslintcache",
 		"lint:ts:fix": "eslint --fix \"src/**/*.ts\" \"src/**/*.tsx\" --cache --cache-location node_modules/.cache/.eslintcache",
-		"lint": "npm run lint:ts"
+		"lint": "npm run lint:ts",
+		"storybook": "start-storybook"
 	},
 	"dependencies": {
 		"core-js": "^3.3.2",
 		"element-theme-chalk": "^2.12.0",
 		"element-ui": "^2.12.0",
+		"lodash": "^4.17.15",
 		"vue": "^2.6.10",
 		"vue-class-component": "^7.0.2",
 		"vue-property-decorator": "^8.3.0",
@@ -26,6 +28,7 @@
 	"devDependencies": {
 		"@babel/preset-env": "^7.6.3",
 		"@types/chai": "^4.1.0",
+		"@types/lodash": "^4.14.145",
 		"@types/mocha": "^5.2.4",
 		"@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
 		"@vue/babel-preset-jsx": "^1.1.1",
