--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
+		"server:start": "npx ts-node ./src/server/startServer.ts",
+		"server:watch": "nodemon ./src/server/startServer.ts",
 		"gulp": "gulp",
 		"serve": "npm run gulp serve",
 		"build": "npm run gulp build",
+		"watch": "npm run gulp watch",
 		"inspect": "npm run gulp inspect",
 		"test:unit": "npm run gulp test:unit",
 		"check-types": "tsc",
@@ -18,7 +21,9 @@
 		"core-js": "^3.3.2",
 		"element-theme-chalk": "^2.12.0",
 		"element-ui": "^2.12.0",
+		"express": "^4.17.1",
 		"lodash": "^4.17.15",
+		"ts-node": "^8.5.0",
 		"vue": "^2.6.10",
 		"vue-class-component": "^7.0.2",
 		"vue-property-decorator": "^8.3.0",
@@ -28,6 +33,7 @@
 	"devDependencies": {
 		"@babel/preset-env": "^7.6.3",
 		"@types/chai": "^4.1.0",
+		"@types/express": "^4.17.2",
 		"@types/lodash": "^4.14.145",
 		"@types/mocha": "^5.2.4",
 		"@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
@@ -54,6 +60,7 @@
 		"gulp": "^4.0.2",
 		"gulp-shell": "^0.7.1",
 		"lint-staged": "^9.4.2",
+		"nodemon": "^1.19.4",
 		"require-dir": "^1.2.0",
 		"sass": "^1.19.0",
 		"sass-loader": "^8.0.0",
