--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"alwaysStrict": true,
 		"lib": ["es6", "dom"],
-		"strict": true,
+		"strict": false,
 		"noUnusedLocals": true,
 		"noEmit": true,
 		"pretty": true,
@@ -11,7 +11,7 @@
 		"moduleResolution": "node"
 	},
 	"include": [
-		"**/*.ts",
+		"src/**/*"
 	],
 	"exclude": [
 		"node_modules",
